# airpods-go-brrrrr

./: CLAUDE.md  README.md  main.py  pyproject.toml
data/TR-595_Technical_Report_Pathology_Tables_and_Curves/: 2010556_Female_Individual_Animal_Neoplastic_Pathology_Data.xls  2010556_Female_Individual_Animal_Non_Neoplastic_Pathology_Data.xls  2010556_Female_Individual_Animal_Survival_Data.xls  2010556_Male_Individual_Animal_Neoplastic_Pathology_Data.xls  2010556_Male_Individual_Animal_Non_Neoplastic_Pathology_Data.xls  2010556_Male_Individual_Animal_Survival_Data.xls  README.md
data/TR-596_Technical_Report_Pathology_Tables_and_Curves/: 2010575_Female_Individual_Animal_Body_Weight_Data.xls  2010575_Female_Individual_Animal_Neoplastic_Pathology_Data.xls  2010575_Female_Individual_Animal_Non_Neoplastic_Pathology_Data.xls  2010575_Female_Individual_Animal_Survival_Data.xls  2010575_Male_Individual_Animal_Body_Weight_Data.xls  2010575_Male_Individual_Animal_Neoplastic_Pathology_Data.xls  2010575_Male_Individual_Animal_Non_Neoplastic_Pathology_Data.xls  2010575_Male_Individual_Animal_Survival_Data.xls  README.md
notebooks/: mouse_summary.ipynb  rat_summary.ipynb
src/: plots.py
